# Video-Conferencer

./: .gitignore  Analysis.tex  Comp_Sci_NEA.tex  Design.tex  ERD.sty  Preamble.tex  README.md  References.bib
Call-Manager/: go.mod
Call-Manager/api/: provider.go
Call-Manager/libs/: utils.go
Event-Manager/: go.mod
Event-Manager/api/: events.go
Report/: Analysis.tex  Appendix.tex  Comp_Sci_NEA.tex  Design.tex  Development.tex  Evaluation.tex  Preamble.tex  References.bib  Settings.tex  add_minted_options.py  number_tests.py
Report/Help_Doc/: Help_demo.tex
VC/: index.html  package.json  t.html  vercel.json
Video-Conf-Docs/: conference.md  create_room.md  definitions.md  index.md  overview.md  package.json  tools.md  vercel.json
Video-Conf-Docs/.vitepress/: config.ts
Video-Conferencer/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
Video-Conferencer/src/: index.css  main.jsx  main.tsx
Video-Conferencer/tests/: Query_Api.test.js  Test_Data.js
call-id-provider/: Cargo.toml  go.mod  package.json  vercel.json
call-id-provider/api/: id-provider.rs  provider.go
call-id-provider/lib/: id-provider-lib.rs
src/: app.js  button_styling.sass  index.html  login.html  main.html  navbar.sass  styles.css  styles.sass  styles_index.css  styles_index.sass  styles_login.css  styles_login.sass  styles_main.css  styles_main.sass
src/Home/: index.html  styles_index.css  styles_index.sass
src/Login/: login.html  login_script.js  styles_login.css  styles_login.sass
stream-token-provider/: package.json  wrangler.toml
(+61 files in other folders)
