[package]
name = "call-id-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1", features = ["macros"] }
vercel_runtime = "1.1.0"
rustls = "0.23"

[[bin]]
name = "id-provider"
path = "api/id-provider.rs"
