[package]
name = "call-id-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1", features = ["macros"] }
vercel_runtime = "1.1.0"
rustls = "0.23"
rand = "0.8.5"
http = "1.2.0"
serde_json = "1.0.134"
serde = { version = "1.0.217", features = ["derive"] }

[[bin]]
name = "id-provider"
path = "api/id-provider.rs"

[lib]
name = "id_provider_lib"
path = "lib/id-provider-lib.rs"
